--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "nuxt": "^3.5.3"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@vueuse/nuxt": "^10.1.2",
+    "ant-design-vue": "^3.2.20",
     "yarn": "^1.22.19"
   }
 }
