--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@nuxtjs/tailwindcss": "^6.7.0",
+    "@pinia/nuxt": "^0.4.11",
     "@vueuse/nuxt": "^10.1.2",
     "ant-design-vue": "^3.2.20",
+    "dayjs-nuxt": "^1.1.2",
+    "pinia": "^2.1.3",
     "yarn": "^1.22.19"
   }
 }
