--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,13 @@
     "@ant-design/icons-vue": "^6.1.0",
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@pinia/nuxt": "^0.4.11",
+    "@types/lodash": "^4.14.195",
     "@vueuse/nuxt": "^10.1.2",
     "ant-design-vue": "^3.2.20",
     "dayjs-nuxt": "^1.1.2",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.3",
+    "url-join": "^5.0.0",
     "yarn": "^1.22.19"
   }
 }
