--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,14 @@
     "@types/lodash": "^4.14.195",
     "@vueuse/nuxt": "^10.1.2",
     "ant-design-vue": "^3.2.20",
+    "chart.js": "^4.3.0",
     "dayjs-nuxt": "^1.1.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
     "pinia": "^2.1.3",
     "url-join": "^5.0.0",
+    "vue-chart-3": "^3.1.8",
     "yarn": "^1.22.19"
   }
 }
