--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@types/node": "^18",
     "@types/lodash": "^4.14.195",
+    "@types/node": "^18",
     "nuxt": "^3.5.3"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@pinia/nuxt": "^0.4.11",
+    "@vueuse/nuxt": "^10.2.1",
     "ant-design-vue": "^3.2.20",
     "chart.js": "^4.3.0",
     "dayjs-nuxt": "^1.1.2",
